--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,13 +9,24 @@ import Layout from '../layouts/Layout.astro';
     </h1>
     <p>Some years ago I decided to leave the independent contracting life behind me and pursue full time employment.</p>
     <p>
-      I am now happily employed at i4-Insight where I organize big data into easy-to-interpret visualizations and
-      predictive analytics.
+      I am now happily employed at <a class="text-gradient" href="https://backboneplm.com/" target="_blank"
+        >Backbone PLM</a
+      > where I deep dive into only the most esoteric and specialized issues we encounter.
     </p>
 
-    <p>I am not active on social media but you can scope some weird projects and experiments on my Github</p>
+    <p>
+      I am not active on social media but you can scope some weird projects and experiments on my <a
+        class="text-gradient"
+        href="https://github.com/mason-smith"
+        target="_blank">Github</a
+      >.
+    </p>
 
-    <p>I have a "blog" called WeirdJS where I just kind of say what's on my mind.</p>
+    <p>
+      I have a "blog" called <a class="text-gradient" href="https://masonsmith.dev/" target="_blank">WeirdJS</a> where I
+      just kind of say what's on my mind. Don't visit that link yet though. It is currently under construction and the content
+      is half finished garbage at the moment.
+    </p>
   </main>
 </Layout>
 
