update meta tags

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,9 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="description" content="SolutionOps - web development home page" />
+    <meta name="keywords" content="Seattle, Washington, Web Development, SEO, " />
+    <meta name="author" content="Mason Smith" />
     <title>{title}</title>
   </head>
   <body>
@@ -28,5 +31,6 @@ const { title } = Astro.props;
     font-family: system-ui, sans-serif;
     background-color: black;
     color: white;
+    margin: 0 0.5rem;
   }
 </style>
