--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Layout from '../layouts/Layout.astro';
     <p>
       I am now happily employed at <a class="text-gradient" href="https://backboneplm.com/" target="_blank"
         >Backbone PLM</a
-      > where I deep dive into only the most esoteric and specialized issues we encounter.
+      > where I deep dive into the more esoteric and specialized issues we encounter.
     </p>
 
     <p>
@@ -24,8 +24,8 @@ import Layout from '../layouts/Layout.astro';
 
     <p>
       I have a "blog" called <a class="text-gradient" href="https://masonsmith.dev/" target="_blank">WeirdJS</a> where I
-      just kind of say what's on my mind. Don't visit that link yet though. It is currently under construction and the content
-      is half finished garbage at the moment.
+      just kind of say what's on my mind. <br />Don't visit that link yet though. It is currently under construction and
+      the content is half finished garbage at the moment.
     </p>
   </main>
 </Layout>
