--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Layout from '../layouts/Layout.astro';
     </p>
 
     <p>
-      I am not active on social media but you can scope some weird projects and experiments on my <a
+      I am not active on social media but you can scope some half-finished side projects and experiments on my <a
         class="text-gradient"
         href="https://github.com/mason-smith"
         target="_blank">Github</a
