--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Layout from '../layouts/Layout.astro';
     </p>
 
     <p>
-      I am not active on social media but you can scope some half-finished side projects and experiments on my <a
+      I am not active on social media but you can scope some small side projects and experiments on my <a
         class="text-gradient"
         href="https://github.com/mason-smith"
         target="_blank">Github</a
@@ -25,7 +25,7 @@ import Layout from '../layouts/Layout.astro';
     <p>
       I have a "blog" called <a class="text-gradient" href="https://masonsmith.dev/" target="_blank">WeirdJS</a> where I
       just kind of say what's on my mind. <br />Don't visit that link yet though. It is currently under construction and
-      the content is half finished garbage at the moment.
+      the content is half finished garbage until I can get around to actually updating it.
     </p>
   </main>
 </Layout>
